src/test/ui/error-codes/E0606.stderr
error[E0606]: casting `&u8` as `u8` is invalid
  --> $DIR/E0606.rs:2:5
   |
LL |     &0u8 as u8;
   |     ----^^^^^^
   |     |
   |     cannot cast `&u8` as `u8`
   |     help: dereference the expression: `*&0u8`

error: aborting due to previous error

For more information about this error, try `dustc --explain E0606`.
